--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -91,8 +91,8 @@
 									Didattica
 								</a>
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" asp-controller="Didattica">Calendario Accademico</a></li>
-									<li><a class="dropdown-item" asp-controller="Didattica">Sedute di laurea</a></li>
+									<li><a class="dropdown-item" asp-controller="Didattica" asp-action="Index">Calendario Accademico</a></li>
+									<li><a class="dropdown-item" asp-controller="Didattica" asp-action="Seduta">Sedute di Laurea</a></li>
 								</ul>
 
 							<li class="nav-item">
