correzione sulla base di login

--- a/Comunicazioni/Views/Shared/_Layout.cshtml
+++ b/Comunicazioni/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
 								</ul>
 							</li>
 							@{
-								var ruolo = Context.Session.GetString("Ruolo");
+								var ruolo = Context.Session.GetString("r");
 							}
 							@if (ruolo != null)
 							//solo se qualcuno ha fatto accesso apparirà la dorpdownlist
