--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -197,9 +197,8 @@
 					<!-- Mostra il nome solo se il modello non è null/vuoto -->
 					@(Model?.Nome ?? "Studente") @(Model?.Cognome ?? "Cognome")
 				</h4>
-				<p class="text-center">Università UniGen</p>
-				<p class="fs-3 text-center">Riepilogo Profilo</p>
-				<span class="text-center">@Model?.Email</span>
+				<p class="text-center">@Model?.Email</p>
+				<p class="fs-3 text-center">Riepilogo Profilo</p>	
 				<hr class="my-4">
 				<h6 class="heading-small text-muted mb-4 text-center">Informazioni di Immatricolazione</h6>
 				<div class="pl-lg-4">
@@ -220,14 +219,14 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group focused">
-								<label class="form-control-label" for="input-enabled">Abilitato</label>
-								<input id="input-enabled" class="form-control form-control-alternative" placeholder="Abilitato" value="@(Model?.Corso?.TitoloCorso ?? "N/A")" type="text" readonly>
+								<label class="form-control-label" for="input-enabled">Corso</label>
+								<input id="input-enabled" class="form-control form-control-alternative" value="@(Model?.Corso?.TitoloCorso?? "N/A")" type="text" readonly>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="form-group focused">
-								<label class="form-control-label" for="input-course">Corso</label>
-								<input id="input-course" class="form-control form-control-alternative" placeholder="Corso" value="@(Model?.Corso?.Facolta.ToString() ?? "N/A")" type="text" readonly>
+								<label class="form-control-label" for="input-course">Facoltà</label>
+								<input id="input-course" class="form-control form-control-alternative" value="@(Model?.Corso?.Facolta?.TitoloFacolta?? "N/A")" type="text" readonly>
 							</div>
 						</div>
 					</div>
