--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -101,7 +101,7 @@
 		<div id="target-section">
 			
 
-			<h1 class=" alert-dark text-center mb-5 ">Offerta Formativa</h1>
+			<h1 class="text-center mb-5 ">Offerta Formativa</h1>
 
 			@* qattro card con immagini e testo *@
 
@@ -120,7 +120,7 @@
 				<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 					<img src="~/Sources/corsidilaureaUNIGEN.png" class="card-img-top" alt="...">
 					<div class="card-body">
-						<p class="fw-bold">Corsi di Laurea</p>
+						<p class="fw-bold"><a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="CorsiLaureaConFacolta">Corsi di Laurea</a></p>
 						<p class="card-text">Scopri l’offerta formativa completa: corsi triennali, magistrali e a ciclo unico, pensati per accompagnarti nel tuo percorso universitario.</p>
 					</div>
 				</div>
