--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -53,11 +53,13 @@
 								<a class="btn btn-sm text-white" style="background-color: #12304F;" asp-controller="Login" asp-action="Login">Login</a>
 							</div>
 						</div>
-						<p class="fs-4 text-black me-3 text-end">Fatti non foste a viver come bruti</p>
+						<p class="fs-4 fst-italic text-black me-3 text-end">"Fatti non foste a viver come bruti"</p>
 
 					</div>
 				</div>
 			</div>
+
+
 			<nav class="navbar navbar-expand-lg navbar-custom">
 				<div class="container">
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
