--- a/AreaDocente/Views/Lezioni/List.cshtml
+++ b/AreaDocente/Views/Lezioni/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AreaDocente.Models.Entities.MVCLezioni>
 
-<div class="container">
+<div class="container my-5">
     <h1>Elenco Lezioni</h1>
 
     <table class="table">
@@ -29,7 +29,7 @@
         <tfoot>
             <tr>
                 <td>
-                    <a class="btn btn-primary" asp-controller="Lezioni" asp-action="Add">Inserire del nuovo materiale</a>
+                    <a class="btn btn-primary" asp-controller="Lezioni" asp-action="Add">Inserire una nuova lezione</a>
                 </td>
             </tr>
         </tfoot>
