--- a/AreaDocente/Views/Materiali/List.cshtml
+++ b/AreaDocente/Views/Materiali/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AreaDocente.Models.Entities.MVCMateriali>
 
-<div class="container">
+<div class="container my-5">
     <h1>Elenco Materiali</h1>
 
     <table class="table">
@@ -30,7 +30,7 @@
         <tfoot>
             <tr>
                 <td>
-                    <a class="btn btn-primary" asp-controller="Materiali" asp-action="Add">Inserire del nuovo materiale</a>
+                    <a class="btn btn-primary" asp-controller="Materiali" asp-action="Add">Inserire un nuovo materiale</a>
                 </td>
             </tr>
         </tfoot>
