--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                     Esami
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Appelli" asp-action="Add">Appelli</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Appelli" asp-action="List">Appelli</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Tests" asp-action="Add">Test</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Valutazioni" asp-action="ValutazioneTest">Valutazioni</a></li>
                                 </ul>
