--- a/AreaDocente/Views/Appelli/Add.cshtml
+++ b/AreaDocente/Views/Appelli/Add.cshtml
@@ -1,4 +1,70 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<h1>Testing</h1>
+@model AreaDocente.Models.AddAppelliViewModel
+
+<div class="container my-5">
+    <h1>Inserimento Appello</h1>
+
+    <div class="card p-4 shadow-sm">
+        <form method="post">
+
+            <div class="mt-3">
+                <label class="form-label">Esame di appartenenza</label>
+                <select asp-for="K_Esame" asp-items="@ViewBag.EsamiDDL" class="form-select">
+                    <option disabled selected>== Selezionare un esame ==</option>
+                </select>
+            </div>
+
+            <div class="mt-3">
+                <label class="form-label">Data Appello</label>
+                <input type="date" class="form-control" id="DataAppello" asp-for="DataAppello" name="DataAppello" />
+            </div>
+
+            <div class="mt-3">
+                <label class="form-label">Data Verbalizzazione</label>
+                <input type="date" class="form-control" id="DataVerbalizzazione" asp-for="DataVerbalizzazione" name="DataVerbalizzazione" />
+            </div>
+
+            <div class="mt-3">
+                <label class="form-label">Tipo appello</label>
+                <select asp-for="Tipo" class="form-select">
+                    <option disabled selected>== Selezionare il tipo dell'appello ==</option>
+                    <option value="O">Orale</option>
+                    <option value="S">Scritto</option>
+                    <option value="L">Laurea</option>
+                </select>
+            </div>
+
+            <div class="mt-3">
+                <label class="form-label">Link appello</label>
+                <input type="text" class="form-control" asp-for="Link" />
+            </div>
+
+            <div class="mt-3">
+                <label class="form-label">Data Orale</label>
+                <input type="date" class="form-control" id="DataOrale" asp-for="DataOrale" name="DataOrale" />
+            </div>
+
+            <div class="mt-3">
+                <button type="submit" class="btn btn-primary">Salva</button>
+            </div>
+
+        </form>
+    </div>
+
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Operazione non riuscita',
+                    text: '@TempData["ErrorMessage"]'
+                });
+            </script>
+        }
+    }
+</div>
