--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Appelli</h5>
                         <p class="card-text">Qui è presente la gestione degli appelli.</p>
-                        <a asp-area="" asp-controller="Appelli" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
+                        <a asp-area="" asp-controller="Appelli" asp-action="List" class="btn btn-primary mt-auto">Vai</a>
                     </div>
                 </div>
             </div>
