--- a/AreaDocente/Views/Lezioni/Add.cshtml
+++ b/AreaDocente/Views/Lezioni/Add.cshtml
@@ -1,16 +1,18 @@
-﻿@model AreaDocente.Models.AddLezioniViewModel
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@model AreaDocente.Models.AddLezioniViewModel
 
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Inserimento Nuova Lezione</h1>
+    <h1>Inserimento Lezione</h1>
 
     <div class="card p-4 shadow-sm">
         <form method="post">
 
-
             <div class="mt-3">
                 <label class="form-label">Esami</label>
                 <select asp-for="K_Esame" asp-items="@ViewBag.EsamiDDl" class="form-select" placeholder="Inserisci il titolo della lezione">
-                    <option disabled selected>Seleziona un esame</option>
+                    <option disabled selected>== Seleziona un esame ==</option>
                 </select>
             </div>
 
@@ -27,6 +29,7 @@
             <div class="mt-4">
                 <button type="submit" class="btn btn-primary btn-lg w-100">Salva</button>
             </div>
+
         </form>
     </div>
 
