--- a/AreaDocente/Views/Lezioni/Edit.cshtml
+++ b/AreaDocente/Views/Lezioni/Edit.cshtml
@@ -1,7 +1,12 @@
-﻿@model AreaDocente.Models.Entities.MVCLezioni
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@model AreaDocente.Models.Entities.MVCLezioni
+
 
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Modifica Lezione</h1>
+
+    <h1>Modifica Lezione</h1>
 
     @if (Model is null)
     {
