--- a/AreaDocente/Views/Materiali/Add.cshtml
+++ b/AreaDocente/Views/Materiali/Add.cshtml
@@ -1,30 +1,50 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-
 @model AreaDocente.Models.AddMaterialiViewModel
 
-<div class="container">
+<div class="container mt-5">
     <h1>Inserimento Materiale</h1>
 
-    <form method="post" enctype="multipart/form-data">
+    <div class="card p-4 shadow-sm">
+        <form method="post" enctype="multipart/form-data">
 
-        <div class="mt-3">
-            <label class="form-label">Titolo</label>
-            <input type="text" class="form-control" asp-for="Titolo" />
-            <label class="form-label" for="file">Titolo</label>
-            <input type="file" id="file" name="materiale" class="form-control" asp-for="materiale" />
-        </div>
-        <div class="mt-3">
-            <label class="form-label">Esame di appartenenza</label>
-            <select asp-for="K_Esame" asp-items="@ViewBag.EsameList" class="form-select">
-                <option disabled selected>==Selezionare un esame</option>
-            </select>
-        </div>
+            <div class="mt-3">
+                <label class="form-label">Titolo</label>
+                <input type="text" class="form-control" asp-for="Titolo" />
+            </div>
+            <div class="mt-3">
+                <label class="form-label" for="file">File</label>
+                <input type="file" id="file" name="materiale" class="form-control" asp-for="materiale" />
+            </div>
+            <div class="mt-3">
+                <label class="form-label">Esame di appartenenza</label>
+                <select asp-for="K_Esame" asp-items="@ViewBag.EsameList" class="form-select">
+                    <option disabled selected>== Selezionare un esame ==</option>
+                </select>
+            </div>
 
 
-        <div class="mt-3">
-            <button type="submit" class="btn btn-primary">Salva</button>
-        </div>
-    </form>
+            <div class="mt-3">
+                <button type="submit" class="btn btn-primary">Salva</button>
+            </div>
+
+        </form>
+    </div>
+
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Operazione non riuscita',
+                    text: '@TempData["ErrorMessage"]'
+                });
+            </script>
+        }
+    }
+
 </div>
