--- a/AreaDocente/Views/Materiali/Edit.cshtml
+++ b/AreaDocente/Views/Materiali/Edit.cshtml
@@ -4,7 +4,7 @@
 @model AreaDocente.Models.EditMaterialiViewModel
 
 
-<div class="container">
+<div class="container mt-5">
 
     <h1>Modifica Materiali</h1>
 
@@ -28,7 +28,7 @@
                     <label class="form-label">Titolo</label>
                     <input type="text" class="form-control" asp-for="Titolo" />
                 </div>
-                <div class="form-group">
+                <div class="mt-3">
                     <label>Nuovo file</label>
                     <input type="file" id="file" name="MaterialeDA" class="form-control" asp-for="MaterialeDA" />
                 </div>
@@ -46,5 +46,20 @@
 
             </form>
         </div>
+    }
+
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Operazione non riuscita',
+                    text: '@TempData["ErrorMessage"]'
+                });
+            </script>
+        }
     }
 </div>
