--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -121,33 +121,39 @@
 		<main role="main" class="">
 			<!-- Modale Login -->
 			<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="loginModalLabel">Login</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
-						</div>
-						<div class="modal-body">
-							<form method="post" asp-controller="Login" asp-action="Login">
-								<div class="mb-3">
-									<label for="email" class="form-label">Username</label>
-									<input type="text" class="form-control" asp-for="username" required>
-								</div>
-								<div class="mb-3">
-									<label for="password" class="form-label">Password</label>
-									<input type="password" class="form-control" asp-for="PWD" required>
-								</div>
-								<button type="submit" class="btn btn-primary w-100">Login</button>
-							</form>
-							<p class="mt-3 text-center">Se non sei ancora registrato</p>
-							<div class="d-flex justify-content-center">
-								<a class="btn btn-secondary" asp-controller="Login" asp-action="Register">Registrati qui</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post" asp-controller="Login" asp-action="Login" id="loginForm">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" asp-for="username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="PWD" asp-for="PWD" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                </form>
 
+                <div class="text-center mt-3">
+                    <button class="btn btn-link" id="recoverBtn" type="button">Recupera password</button>
+                    <div id="recoveryMessage" class="text-success mt-2" style="display:none;"></div>
+                    <div id="recoveryError" class="text-danger mt-2" style="display:none;"></div>
+                </div>
+
+                <p class="mt-3 text-center">Se non sei ancora registrato</p>
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-secondary" asp-controller="Login" asp-action="Register">Registrati qui</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 			@RenderBody()
 		</main>
 	</div>
@@ -187,6 +193,9 @@
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+
+
 	@await RenderSectionAsync("Scripts", required: false)
+	
 </body>
 </html>
