--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -42,7 +42,7 @@
 						<span asp-validation-for="K_Studente" class="text-danger"></span>
 					</div>
 				}
-				@if (ruolo == "o")
+				@if (ruolo == "a")
 				{
 					<div class="mt-3">
 						<label class="form-label">Studenti</label>
