--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                                     Immatricolazione
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="">Invia Documenti</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Immatricolazioni" asp-action="Add">Invia Documenti</a></li>
                                 </ul>
                             </li>
 
