--- a/AreaDocente/Views/Appelli/Add.cshtml
+++ b/AreaDocente/Views/Appelli/Add.cshtml
@@ -22,17 +22,12 @@
             </div>
 
             <div class="mt-3">
-                <label class="form-label">Data Verbalizzazione</label>
-                <input type="date" class="form-control" id="DataVerbalizzazione" asp-for="DataVerbalizzazione" name="DataVerbalizzazione" />
-            </div>
-
-            <div class="mt-3">
                 <label class="form-label">Tipo appello</label>
-                <select asp-for="Tipo" class="form-select">
+                <select asp-for="Tipo" class="form-select" id="TipoAppello">
                     <option disabled selected>== Selezionare il tipo dell'appello ==</option>
-                    <option value="O">Orale</option>
-                    <option value="S">Scritto</option>
-                    <option value="L">Laurea</option>
+                    <option value="Or">Orale</option>
+                    <option value="Sc">Scritto</option>
+                    <option value="La">Laurea</option>
                 </select>
             </div>
 
@@ -41,9 +36,9 @@
                 <input type="text" class="form-control" asp-for="Link" />
             </div>
 
-            <div class="mt-3">
+            <div class="mt-3" id="DataOraleDiv" style="display: none;">
                 <label class="form-label">Data Orale</label>
-                <input type="date" class="form-control" id="DataOrale" asp-for="DataOrale" name="DataOrale" />
+                <input type="datetime-local" class="form-control" id="DataOrale" asp-for="DataOrale" name="DataOrale" />
             </div>
 
             <div class="mt-3">
@@ -66,5 +61,29 @@
                 });
             </script>
         }
+
+        <script>
+            // Gestisce la visibilità dei campi Link e Data Orale in base al tipo selezionato
+            document.getElementById("TipoAppello").addEventListener("change", function () {
+                var tipoSelezionato = this.value;
+
+                // Se "Orale", mostra i campi Link e Data Orale
+                if (tipoSelezionato === "Or") {
+                    document.getElementById("DataOraleDiv").style.display = "block";
+                }
+                // Altrimenti nascondi
+                else {
+                    document.getElementById("DataOraleDiv").style.display = "none";
+                }
+            });
+
+            // Esegui subito il controllo quando la pagina è caricata, per il caso in cui il valore sia già impostato su "Orale"
+            window.addEventListener("load", function () {
+                var tipoSelezionato = document.getElementById("TipoAppello").value;
+                if (tipoSelezionato === "Or") {
+                    document.getElementById("DataOraleDiv").style.display = "block";
+                }
+            });
+        </script>
     }
 </div>
