--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                         </ul>
                         <ul class="navbar-nav navbar-right">
                             <li class="nav-item">
-                                <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> *Placeholder*</a>
+                                <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> *PLACEHOLDER* </a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-light btn-sm">Logout</a>
