--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                                 <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> *PLACEHOLDER* </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-light btn-sm">Logout</a>
+                                <a class="btn btn-light btn-sm" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                             </li>
 
                         </ul>
