--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -83,7 +83,8 @@
                         </ul>
                         <ul class="navbar-nav navbar-right">
                             <li class="nav-item">
-                                <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> *PLACEHOLDER* </a>
+                                @* <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> @ViewBag.usr </a> *@
+                                <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> @Context.Session.GetString("usr") </a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-light btn-sm" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
