--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/Studenti/Show/@ViewData["studente_id"]">Il mio Profilo</a>
+                                <a class="nav-link active" aria-current="page" href="/Studenti/Show?cod=@ViewData["studente_id"]">Il mio Profilo</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -89,7 +89,7 @@
                                 <ul class="dropdown-menu">
 
                                     <li class="dropdown">
-                                        <a class="dropdown-item" href="/Studenti/ModificaProfilo/@ViewData["studente_id"]">
+                                        <a class="dropdown-item" href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
                                             Modifica Dati
                                         </a>
                                     </li>
