sistemate card home page
Ora sono tutte uguali le 4 card area formativa

--- a/AreaPubblica/Views/OffertaFormativa/Programma.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/Programma.cshtml
@@ -15,7 +15,7 @@
 }
 
 <div class="container" style="padding-top:100px; padding-bottom:100px;">
-    <h1 class="mb-4">Programma dei corsi</h1>
+    <h1 class="mb-4"style="padding:25px;">Programma dei corsi</h1>
     <div class="mb-4">
         I nostri corsi offrono un percorso formativo strutturato e innovativo, pensato per garantire agli studenti una preparazione solida e completa. 
         I corsi sono progettati per unire teoria e pratica, fornendo conoscenze fondamentali e competenze applicabili nel mondo del lavoro e della ricerca.
