sistemato bootstrap home

--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -99,6 +99,7 @@
 <main>
 	<div class="container mt-5">
 		<div class="row justify-content-center g-4">
+
 			<h2>Offerta Formativa</h2>
 
 			<div class="col-12 col-sm-6 col-lg-3">
@@ -168,7 +169,7 @@
 
 
 
-	<div id="news" class=" mt-5 ">
+	<div id="news" class="container mt-5 ">
 		<h2 class="mt-5  d-flex flex-row justify-content-around ">Ultime Notizie</h2>
 		<div class=" mb-3 col card" style="transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 			<div class="row g-0">
@@ -188,7 +189,7 @@
 
 		<div class="d-flex flex-row justify-content-around mt-2">
 
-			<div class="col card me-2" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
+			<div class="col card me-2 mb-5" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 				<img src="~/sources/BandiErasmusUNIGEN.jpg" class="card-img-top " alt="...">
 				<div class="card-body">
 					<p class="fw-bold">Nuovi Bandi Erasmus</p>
@@ -197,7 +198,7 @@
 			</div>
 
 
-			<div class="col card " style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
+			<div class="col card mb-5" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 				<img src="~/Sources/RicercaUNIGEN.jpg" style="" class="card-img-top " alt="...">
 				<div class="card-body">
 					<p class="fw-bold"> UniGeneration per la ricerca.</p>
