--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                     <div class="d-flex gap-2 me-3">
                         @if (@ViewData["matricola"] != null)
                         {
-                            <a href="http://Lezioni_Materiali.aspx"+studente.K_Studente.ToString().ToUpper()+studente.K_Matricola.ToString()" class="btn btn-sm text-white" style="background-color: #12304F;">Area Lavoro</a>
+                            <a href="https://localhost:7050/Lezioni_Materiali.aspx?cod=" +studente.K_Studente.ToString()+"&&usr="+studente.Email+"&&=s"+&&mat="@ViewData["matricola"] class="btn btn-sm text-white" style="background-color: #12304F;">Area Lavoro</a>
                         } else
                         {
                             <p>disattivato</p>
