--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -183,8 +183,9 @@
                                                     <div class="form-outline">
                                                         <textarea class="form-control bg-body-tertiary" id="textArea_@gruppo.Key" rows="4" name="Testo"></textarea>
                                                         <label class="form-label" for="textArea_@gruppo.Key">Messaggio</label>
+													    <button type="submit" class="btn btn-info btn-rounded float-end mt-2">Invia</button>
                                                     </div>
-                                                    <button type="submit" class="btn btn-info btn-rounded float-end mt-2">Invia</button>
+                                                    @* <button type="submit" class="btn btn-info btn-rounded float-end mt-2">Invia</button> *@
                                                 </form>
                                             </li>
                                         </ul>
