--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
         right: 0; /* Posiziona il link a destra */
         }
 
+        body {
+            background-color: #f8f9fe;
+        }     
     </style>
 
 </head>
@@ -87,9 +90,8 @@
                                     Gestione Profilo
                                 </a>
                                 <ul class="dropdown-menu">
-
                                     <li class="dropdown">
-                                        <a class="dropdown-item" href="/Studenti/ModificaProfilo/@ViewData["studente_id"]">
+                                        <a class="dropdown-item" style="color: inherit;" href="/Studenti/ModificaProfilo/@ViewData["studente_id"]">
                                             Modifica Dati
                                         </a>
                                     </li>
