--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -56,7 +56,7 @@
 					<label class="form-label form-control-label">E-Mail</label>
 					<input type="email" asp-for="Email" class="form-control form-control-alternative" readonly />
 				</div>
-				<div class="col-12 col-lg-3 mb-2 mb-lg-0">
+				<div class="col-12 col-lg-3 mb-lg-0">
 					<a type="button" class="btn btn-primary fs-6" data-bs-toggle="modal" data-bs-target="#modifica-password-modal" aria-expanded="false" aria-controls="modifica-password-collapse">Modifica Password</a>
 				</div>
 			</div>
@@ -124,15 +124,15 @@
 
 			<h4 class="heading-small text-muted">Dati Anagrafici</h4>
 			<div class="row mb-0 mb-lg-3">
-				<div class="col-12 col-lg-4 mb-2 mb-lg-0">
+				<div class="col-12 col-lg-4  mb-lg-0">
 					<label class="form-label form-control-label">Cognome</label>
 					<input type="text" asp-for="Cognome" class="form-control form-control-alternative text-capitalize" required />
 				</div>
-				<div class="col-12 col-lg-4 mb-2">
+				<div class="col-12 col-lg-4 ">
 					<label class="form-label form-control-label">Nome</label>
 					<input type="text" asp-for="Nome" class="form-control form-control-alternative text-capitalize" required />
 				</div>
-				<div class="col-12 col-lg-4 mb-2">
+				<div class="col-12 col-lg-4 ">
 					<label class="form-label form-control-label">Data di Nascita</label>
 					<input type="date" asp-for="DataNascita" class="form-control form-control-alternative" id="dataNascita" required />
 				</div>
