--- a/AreaDocente/Views/Appelli/Edit.cshtml
+++ b/AreaDocente/Views/Appelli/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container mt-5">
 
-    <h1>Modifica Lezione</h1>
+    <h1>Modifica Appello</h1>
 
     @if (Model is null)
     {
@@ -58,8 +58,9 @@
                     <input type="datetime-local" class="form-control" id="DataOrale" asp-for="DataOrale" name="DataOrale" />
                 </div>
 
-                <div class="mt-3">
-                    <button type="submit" class="btn btn-primary">Salva</button>
+                <div class="mt-4 d-flex justify-content-between">
+                    <button type="submit" class="btn btn-primary btn-lg">Modifica</button>
+                    <button type="submit" class="btn btn-danger ms-3" asp-controller="Appelli" asp-action="Delete">Elimina</button>
                 </div>
 
             </form>
