--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         <div class="fixed-top">
             <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
                 <div class="container">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                         <img src="~/css/resources/logonobg.png" alt="Bootstrap" width="150">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
