--- a/AreaStudente/wwwroot/css/show.css
+++ b/AreaStudente/wwwroot/css/show.css
@@ -282,8 +282,8 @@ h6,
 .h5,
 .h6 {
     font-family: inherit;
-    font-weight: 600;
-    line-height: 1.5;
+    font-weight: 500;
+    line-height: 1.2;
     margin-bottom: .5rem;
     color: #32325d;
 }
@@ -300,7 +300,8 @@ h3,
 
 h4,
 .h4 {
-    font-size: .9375rem;
+    font-size: calc(1.275rem + .3vw);
+    color: #212529;
 }
 
 h5,
@@ -585,7 +586,7 @@ textarea.form-control {
 
 .btn {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 1.5;
     display: inline-block;
     padding: .625rem 1.25rem;
@@ -737,7 +738,7 @@ textarea.form-control {
     font-size: .875rem;
     line-height: 1.5;
     padding: .25rem .5rem;
-    /*border-radius: .375rem;*/
+   *border-radius: .2rem
 }
 
 /*.dropdown {
@@ -1526,7 +1527,7 @@ a.text-white:focus {
 }
 
 .btn-sm {
-    font-size: 1rem;
+    font-size: .875rem;
 }
 
 [class*='btn-outline-'] {
@@ -1656,7 +1657,7 @@ a.text-white:focus {
     }
 
 .form-control-label {
-    font-size: .875rem;
+    font-size: .900rem;
     font-weight: 600;
     color: #525f7f;
 }
@@ -2012,7 +2013,7 @@ p {
 }
 
 .heading-small {
-    font-size: .75rem;
+    font-size: .90rem;
     padding-top: .25rem;
     padding-bottom: .25rem;
     letter-spacing: .04em;
