--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown">
-                                       <a class="dropdown-item" href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
+                                       <a class="dropdown-item" style="color:inherit; "href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
                                             Modifica Dati
                                         </a>
                                     </li>
