--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -188,7 +188,7 @@
 			<div class="mb-5">&nbsp;</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
-					<div class="card bg-secondary shadow">
+					<div class="card shadow">
 						<div class="card-body text-center">
 							@if (ViewBag.ErrorMessage != null)
 							{
