--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -81,8 +81,8 @@
 											Piano di studi
 										</a>
 										<ul class="dropdown-menu dropdown-submenu">
-											<li><a class="dropdown-item" asp-controller="OffertaFormativa">Programma</a></li>
-											<li><a class="dropdown-item" asp-controller="OffertaFormativa" asp-action="ElencoDocenti">Esami e docenti</a></li>
+											<li><a class="dropdown-item" asp-controller="OffertaFormativa" asp-action="ElencoCorsiCompleti">Programma</a></li>
+											<li><a class="dropdown-item" asp-controller="OffertaFormativa" asp-action="ElencoDocentiConEsami">Esami e docenti</a></li>
 										</ul>
 									</li>
 								</ul>
