--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             <h2 class="text-center">Pannello del docente</h2>
         </div>
 
-        <div class="row g-4 justify-content-around">
+        <div class="row gy-4 gx-md-2 gx-lg-0 justify-content-around">
 
             <div class="col-12 col-md-4 col-lg-2 d-flex align-items-stretch">
                 <div class="card shadow">
